fixed redirect and added username as query parameter; now fully functioning

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -2,6 +2,6 @@
 <html>
     <head></head>
     <body>
-    Welcome, {{ username }}!
+    <p><center><h1>Welcome, {{ username }}!</h1></center></p>
     </body>
 </html>
